--- a/css/style.css
+++ b/css/style.css
@@ -517,15 +517,27 @@ footer p:nth-child(2) {
 }
 
 @media screen and (max-width: 375px) {
+   
+   body{
+    width: auto;
+   }
+   .logo h2
+   {
+    width: 100%;
+   }
+   .logo
+   {
+    width: 100%;
+   }
     nav ul li a {
-        font-size: 40px;
+        font-size: 21px;
 
     }
 
     nav ul {
         flex-direction: column;
         flex-flow: wrap;
-        width: 131%;
+     
     }
 
     nav {
@@ -536,7 +548,11 @@ footer p:nth-child(2) {
     }
 
     .citation {
-        margin-top: 110%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 400px;
+        margin-left: 15px;
     }
 
     #top-button {
@@ -555,14 +571,62 @@ footer p:nth-child(2) {
 
     }
 
-    img {
-        flex-direction: column;
-        flex-wrap: wrap;
-
+    .texte-parcours
+    {
+        width: 100%;
+    }
+    .mon-parcours
+    {
+        display: flex;
+        height: auto;
+    }
+.principal
+{
+    height: auto;
+    flex-direction: column;
+    
+}
+    .mon-parcours img{
+        height: 400px;
+    width: 100%;
     }
 
+    .texte-parcours h2 {
+        color: white;
+        font-size: 30px;
+        margin-bottom: 10px;
+        display: flex;
+       text-align: center;
+      }
+      .sous-titre
+      {
+        font-size: 25px;
+        text-align: center;
+      
+      }
+
+      .texte-parcours .description
+      {
+        font-size: 18px;
+        text-align: justify;
+        width: 100%;
+       
+        letter-spacing: 0px;
+      }
+
+
+      .titre h2
+      {
+        width: auto;
+        font-size: 40px;
+      }
+      .box
+      {
+        flex-direction: column;
+      }
     .carte {
         flex-direction: column;
+        width: 80%;
     }
 
     .carte img:hover {
@@ -584,7 +648,13 @@ footer p:nth-child(2) {
         height: 5%;
 
     }
-
+.mail p{
+    font-size: 27px;
+}
+.mail .boutton-deux
+{
+    font-size: 27px;
+}
     .carte .texte span {
         font-size: 18px;
     }
