--- a/css/page2.css
+++ b/css/page2.css
@@ -334,9 +334,17 @@ body {
 
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 400px) {
+    body {
+        width: 100%;
+    }
+
+    .logo {
+        width: 100%;
+    }
+
     nav {
-        width: 10%;
+
         flex-direction: column;
         margin-bottom: 10%;
 
@@ -349,7 +357,7 @@ body {
     .intro h1 {
         margin-top: 10%;
         font-size: 30px;
-        width: auto;
+        width: 44%;
     }
 
     .intro {
@@ -372,10 +380,12 @@ body {
         scale: 1.3;
     }
 
+    .carte .texte {
+        width: 100%;
+    }
+
     .carte img {
-        object-fit: contain;
-        justify-content: center;
-        flex-wrap: wrap;
+        margin-left: 8%;
     }
 
     .screen {
@@ -388,6 +398,10 @@ body {
 
     }
 
+    .description {
+        width: 96%;
+    }
+
     .carte .texte span {
         font-size: 18px;
     }
@@ -398,20 +412,31 @@ body {
 
     .carte .screen {
         justify-content: space-between;
-        width: fit-content;
+        width: 80%;
         margin: auto;
     }
 
     .carte h2 {
-        width: 150%;
+        width: 100%;
+        font-size: 29px;
+        margin-top: 15%;
     }
 
-    .objectif h1 {
+    .objectif h2 {
         margin-left: 0%;
+        width: 80%;
+    }
+
+    .objectif {
+        margin-left: 0%;
+        width: 100%;
     }
 
     .objectif p {
-        font-size: 20px;
+        font-size: 22px;
         text-align: justify;
+        width: 96%;
     }
+
+
 }
