--- a/css/page3.css
+++ b/css/page3.css
@@ -206,7 +206,7 @@ body {
 .carte img:hover {
     cursor: pointer;
     transition: 0.4s;
-    scale: 2.5;
+    scale: 2;
     filter: brightness(0.98);
     text-decoration: none;
     justify-content: center;
@@ -215,8 +215,8 @@ body {
 }
 
 
-.carte img .logopi {
-    width: 25%;
+.carte img .logopi:hover {
+    scale: none;
 }
 
 .carte img {
@@ -224,22 +224,24 @@ body {
     flex-direction: column;
     justify-content: space-around;
     display: flex;
-    width: 80%;
+    width: auto;
 
 
 }
 
 .carte .screen {
     filter: drop-shadow(5px 20px 20px rgb(32, 32, 32));
-    margin-left: 40px;
-    margin-top: 10%;
+    margin-left: 17%;
+    margin-top: 0%;
     margin-right: 4%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 40%;
-    height: 40%;
+    width: 22%;
+    height: 22%;
     border: solid 0.1px rgb(243, 212, 153);
+    display: flex;
+    flex-direction: column;
 }
 
 .description {
@@ -305,7 +307,7 @@ body {
 .banniere {
     display: flex;
     width: 80%;
-    
+
 }
 
 .template:hover {
@@ -317,12 +319,12 @@ body {
 
     height: auto;
     width: 50%;
-   
+
 }
 
 .sbt {
     width: 35%;
-    
+
 
 }
 
@@ -345,4 +347,155 @@ body {
 .twitter {
 
     width: 50%;
+}
+
+
+@media screen and (max-width: 400px) {
+    body {
+        width: 100%;
+    }
+
+    .objectif .pointdevu {
+        margin-left: 0px;
+        width: 100%;
+        font-size: 35px;
+    }
+
+    .logo {
+        width: 100%;
+    }
+
+    nav {
+
+        flex-direction: column;
+        margin-bottom: 10%;
+
+    }
+
+    #top-button {
+        right: 14%;
+    }
+
+    .intro h1 {
+        margin-top: 10%;
+        font-size: 44px;
+        width: 44%;
+    }
+
+    .intro {
+        margin-left: 20%;
+        flex-direction: column;
+
+    }
+
+    img {
+        flex-direction: column;
+        flex-wrap: wrap;
+
+    }
+
+    .carte {
+        flex-direction: column;
+    }
+
+    .carte img:hover {
+        scale: 1.3;
+    }
+
+    .carte .texte {
+        width: 100%;
+    }
+
+    .carte img {
+        margin-left: 8%;
+        width: inherit;
+    }
+
+    .screen {
+        object-fit: contain;
+        justify-content: space-around;
+        flex-direction: column;
+        flex-flow: wrap;
+        width: 5%;
+        height: 5%;
+
+    }
+
+    .description {
+        width: 96%;
+    }
+
+    .carte p {
+        font-size: 27px;
+        text-align: left;
+    }
+
+    .carte .texte span {
+        font-size: 18px;
+    }
+
+    .carte .texte {
+        font-size: 18px;
+    }
+
+    .carte .screen {
+        justify-content: space-between;
+        width: 80%;
+        margin: auto;
+    }
+
+    .carte h2 {
+        width: 100%;
+        font-size: 29px;
+        margin-top: 15%;
+    }
+
+    .objectif h2 {
+        margin-left: 0%;
+        width: 80%;
+    }
+
+    .objectif {
+        margin-left: 0%;
+        width: 100%;
+    }
+
+    .objectif p {
+        font-size: 22px;
+        text-align: justify;
+        width: 96%;
+    }
+
+    .titrecreation {
+        font-size: 30px;
+        margin-left: 0px;
+        width: 100%;
+
+    }
+
+    .creation {
+        width: 100%;
+        margin-left: 0px;
+    }
+
+    .banniere {
+        width: 100%;
+        height: auto;
+    }
+
+    .sbt {
+        width: 100%;
+    }
+
+    .twitter {
+        width: 100%;
+    }
+
+    .template {
+        width: 100%;
+    }
+
+    .kitchen {
+        width: 100%;
+    }
 }
