--- a/css/style.css
+++ b/css/style.css
@@ -356,23 +356,12 @@ nav ul li a:hover {
 }
 
 
-.mail::before {
-    content: "";
-    position: absolute;
-    display: flex;
-    margin-top: 28.5%;
-    width: 100%;
-    height: 10.9%;
-    background: linear-gradient(rgba(0, 0, 0, 0.04), rgba(0, 0, 0, 0.9));
-    z-index: 1;
-    justify-content: space-between;
-    bottom: 100%;
-}
+
 
 .mail {
     flex-direction: column;
     display: flex;
-    height: 250px;
+    height: 350px;
     align-items: center;
     padding: 40px;
     width: 100%;
@@ -402,6 +391,26 @@ nav ul li a:hover {
     transition: 0.2s;
     filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.8));
     transform: perspective(5px)
+}
+
+.mail label
+{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-family: sans-serif;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+.mail textarea
+{
+    height: 100px;
+}
+.mail form
+{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
@@ -478,6 +487,11 @@ footer p:nth-child(2) {
 /*tablette*/
 @media screen and (max-width: 1024px) {
 
+    #top-button
+    {
+        width: 13%;
+        right: 0%;
+    }
     img {
         flex-direction: column;
         flex-wrap: wrap;
@@ -656,6 +670,32 @@ footer p:nth-child(2) {
     .mail .boutton-deux {
         font-size: 27px;
     }
+
+    
+.mail textarea
+{
+    height: 70px;
+}
+.mail label
+{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-family: sans-serif;
+    margin-bottom: 5%;
+    height: 50%;
+    margin-top: 5%;
+}
+.mail form
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
 
     .carte .texte span {
         font-size: 18px;
